--- a/wow/public/index.html
+++ b/wow/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Hello! We are web 3.0 creative agency. We would like to introduce you to NFT collection WOW GURT"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg"/>
     <!--
