--- a/wow/public/index.html
+++ b/wow/public/index.html
@@ -11,6 +11,15 @@
             content="Hello! We are web 3.0 creative agency. We would like to introduce you to NFT collection WOW GURT"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg"/>
+    <meta name="twitter:title" content="WOW Gurt Agency">
+    <meta name="twitter:image" content="https://wooooooow.fra1.cdn.digitaloceanspaces.com/logo.png">
+    <meta name="twitter:description" content="WOW Gurt Agency">
+    <meta name="twitter:card" content="player">
+    <meta name="twitter:player" content="https://wow.gurt.agency/container.html"/>
+    <meta name="twitter:player:width" content="720">
+    <meta name="twitter:player:height" content="720">
+    <meta name="twitter:player:stream" content="https://wooooooow.fra1.cdn.digitaloceanspaces.com/weeeeee.mp4">
+    <meta name="twitter:player:stream:content_type" content="video/mp4">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
