--- a/wow/public/index.html
+++ b/wow/public/index.html
@@ -37,6 +37,18 @@
     <title>WOW GURT</title>
 </head>
 <body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5GCRTFEDH"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y5GCRTFEDH');
+</script>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <!--
